Fill in more of the UI structure. This mostly works, except scrolling. That will probably need to be solved by redoing a lot of this structure to use a single recycler view for the entire home page rather than just part of it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string name="app_name">Oppia</string>
+  <string name="home_activity_name">Home</string>
+  <string name="continue_playing_section_header">Continue with your Lesson</string>
+  <string name="more_topics_button_text">More</string>
+  <string name="all_topics_section_header">All Topics</string>
   <string name="welcome_text">Welcome to Oppia!</string>
   <string name="welcome_back_text">Welcome back to Oppia!</string>
+  <string name="loading_topics_list_text">Loading topics list…</string>
+  <string name="error_loading_topics_list_text">Error loading topics list</string>
+  <string name="empty_topics_list_text">There are no topics to show</string>
+
+  <plurals name="lesson_count">
+    <item quantity="one">
+      1 Lesson
+    </item>
+    <item quantity="other">
+      %d Lessons
+    </item>
+  </plurals>
+
   <string name="audio_pause_play_description">Audio play/pause button</string>
   <string name="audio_language_select_dialog_okay_button">OK</string>
   <string name="audio_language_select_dialog_cancel_button">CANCEL</string>
