Icons, drawables, colors and strings (#215)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,11 @@
   <string name="topic_train_master_these_skills">Master These Skills</string>
   <string name="topic_train_skills_description">Select or unselect skills that you want to practice</string>
   <string name="topic_train_start">Start</string>
+  <string name="state_continue_button">CONTINUE</string>
+  <string name="state_continue_submit">SUBMIT</string>
+  <string name="previous_state_description">Button to go to previous state</string>
+  <string name="next_state_description">Button to go to next state</string>
+  <string name="state_submit_button">SUBMIT</string>
+  <string name="state_end_exploration_button">RETURN TO TOPIC</string>
+  <string name="state_learn_again_button">LEARN AGAIN</string>
 </resources>
